<resources>

    <string name="app_name">Sudoku</string>
    <string name="title_label">Sudoku</string>
    <string name="continue_button">Continue</string>
    <string name="newgame_button">New game</string>
    <string name="about_button">About</string>
    <string name="exit_button">Exit</string>
    <string name="about_text">About Sudoku</string>

    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>

    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>

    <string name="draw_example_title">Draw example</string>

    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>

</resources>
