<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@color/main_background"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            android:textSize="30sp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/button_continue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_button"
            android:textSize="@dimen/button_text"
            android:background="@color/main_button" />

        <Button
            android:id="@+id/button_newgame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newgame_button"
            android:textSize="@dimen/button_text"
            android:background="@color/main_button" />

        <Button
            android:id="@+id/button_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_button"
            android:textSize="@dimen/button_text"
            android:background="@color/main_button" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_button"
            android:textSize="@dimen/button_text"
            android:background="@color/main_button" />

    </LinearLayout>

</LinearLayout>
